Fixed CSS layout bug.

--- a/client/less/footer.less
+++ b/client/less/footer.less
@@ -2,8 +2,10 @@
  * client/less/footer.less
  */
 
+@footer-height: @navbar-height;
+
 #footer {
-  height: @navbar-height;
+  height: @footer-height;
   background-color: #e0e0e0;
 
   .container .credit {
